--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,27 +108,37 @@ elseif (IS_OS_WINDOWS)
     set(GLFW_FOUND TRUE)
     set(GLEW_FOUND TRUE)
     set(SDL2_FOUND TRUE)
-    #set(ENTT_FOUND TRUE)
 	
     set(GLEW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/include")
     set(GLFW_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/include")
     set(SDL2_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/include/SDL")
-    #set(ENTT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/ext/entt")
 
     if (${CMAKE_SIZEOF_VOID_P} MATCHES "8")
-        set(GLEW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32.lib")
-        set(GLEW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32s.lib")
-        set(GLFW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3dll.lib")
-        set(GLFW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3.lib")
-        set(GLFW_C "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3_mt.lib")
+        set(GLEW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32-x64.lib")
+        set(GLEW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32s-x64.lib")
+        set(GLFW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3dll-x64.lib")
+        set(GLFW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3-x64.lib")
+        set(GLFW_C "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3_mt-x64.lib")
         set(SDL2_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2-x64.lib")
 	    set(SDL2MIXER_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2_mixer-x64.lib")
 
-        set(GLEW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32.dll")
-	    set(GLFW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3.dll")
+        set(GLEW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32-x64.dll")
+	    set(GLFW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3-x64.dll")
 	    set(SDL_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2-x64.dll")
 	    set(SDLMIXER_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2_mixer-x64.dll")
-    #set(ENTT "${CMAKE_CURRENT_SOURCE_DIR}/ext/entt/entt.hpp")
+    else()
+        set(GLEW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32-x86.lib")
+        set(GLEW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32s-x86.lib")
+        set(GLFW_A "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3dll-x86.lib")
+        set(GLFW_B "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3-x86.lib")
+        set(GLFW_C "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3_mt-x86.lib")
+        set(SDL2_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2-x86.lib")
+	    set(SDL2MIXER_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2_mixer-x86.lib")
+
+        set(GLEW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glew/lib/glew32-x86.dll")
+	    set(GLFW_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/glfw/lib/glfw3-x86.dll")
+	    set(SDL_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2-x86.dll")
+	    set(SDLMIXER_DLL "${CMAKE_CURRENT_SOURCE_DIR}/ext/sdl/lib/SDL2_mixer-x86.dll")
     endif()
 
     # Copy and rename dlls
