fixed undefined symbols

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,12 +96,14 @@ if (IS_OS_LINUX OR IS_OS_MAC)
 
     find_package(GLEW REQUIRED)
     include_directories(${GLEW_INCLUDE_DIRS})
+    include_directories(${GLFW_INCLUDE_DIRS})
 
     # Link Frameworks on OSX
     if (IS_OS_MAC)
        find_library(COCOA_LIBRARY Cocoa)
        find_library(CF_LIBRARY CoreFoundation)
-       target_link_libraries(${PROJECT_NAME} PUBLIC ${COCOA_LIBRARY} ${CF_LIBRARY})
+       target_link_libraries(${PROJECT_NAME} PUBLIC ${GLEW_LIBRARIES} ${GLFW_LIBRARIES} ${COCOA_LIBRARY} ${CF_LIBRARY})
+      #  target_link_libraries(${PROJECT_NAME} PUBLIC glfw ${CMAKE_DL_LIBS})
     endif()
 
     # Increase warning level
