--- a/data/levels/procedural1/level.yaml
+++ b/data/levels/procedural1/level.yaml
@@ -8,7 +8,7 @@ enemies:
     spikes: 2
     drones: 3
 items:
-    wall_breaker: 2
-    extra_life: 1
-    teleport: [1,2]
-    time_slow: 1
+    wall breaker: 2
+    extra life: 1
+    teleporter: [1,2]
+    time slow: 1
